# KSP-kRPC-carrier

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  krpc_with_poliastro.ipynb  launch_ckan.sh  launch_ksp.sh  pyproject.toml  requirements.ckan  requirements.in  requirements.txt  vscode_mac.code-workspace  vscode_win.code-workspace  win_vscode.code-workspace
Ships/VAB/: KSV Furry WildCat 1.craft  SSU Chocolate Pioneer 2.craft  SSU Chocolate Pioneer 3.craft
saves/default/: persistent.loadmeta  persistent.sfs  quicksave.loadmeta  quicksave.sfs
saves/default/Ships/VAB/: ACU Tabby Ranger II.craft  ACU Tabby Ranger Launcher.craft  ACU Tabby Ranger.craft  KSV Survey WildCat.craft  SSC Brave Spark 1.craft  SSC Brave Spark 2.craft  SSU Chocolate Pioneer 1.craft  SSU Chocolate Pioneer 2.craft  SSU Fluff-World 2.craft  (+4 more)
saves/default/Subassemblies/: 1.25m 2.5t to 100km Kerbal.craft  ACU Tabby Ranger.craft
scenarios/: KSV Furry WildCat 1.py  SSC Brave Spark 2.py  SSU Chocolate Pioneer 2 launch.py  SSU Chocolate Pioneer 2 reentry.py  SSU Chocolate Pioneer 3 launch.py
scenarios/utils/: __init__.py  execute_node.py  hohmann_transfer.py  launch_into_orbit.py  status_dialog.py
scripts/scenarios/: ACU Tabby Ranger II.py  KSC Planet-Horizon.py  SSC Brave Spark 1.py  SSU Chocolate Pioneer 1.py  SSU Chocolate Pioneer 2 launch.py  SSU Chocolate Pioneer 2 reentry.py  SSU Chocolate Pioneer 4.py  SSU Chocolate Pioneer 5.py  SSU Fluff-World 2.py
scripts/utils/: autopilot_workaround.py  autostage.py  decent.py  entry_simulation.py  execute_node.py  hohmann_transfer.py  krpc_poliastro.py  launch_into_orbit.py  maneuver.py  status_dialog.py  utils.py
util/: lunch_into_orbit.py
