[tool.poetry]
name = "ksp-krpc-carrier"
version = "0.1.0"
description = ""
authors = ["Toshiaki Hatano <haeena@haeena.net>"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"
mypy = "^0.761"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[tool.isort]
known_first_party = ""
known_third_party = ["astropy", "krpc", "numpy", "poliastro", "quaternion", "scripts"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
